# swatcher

./: .clangd  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  build.zig  build.zig.zon  swatcher.pc.in
.github/workflows/: ci.yml
bindings/zig/: swatcher.zig  test_swatcher.zig
cmake/: swatcherConfig.cmake.in
examples/: live_reload.c  swatcher_cpp.cpp  swatcher_first.c  swatcher_zig.zig
examples/test/: test.txt
include/: swatcher.h  swatcher.hpp  swatcher_common.h  swatcher_linux.h  swatcher_macos.h  swatcher_types.h  swatcher_version.h.in  swatcher_windows.h
src/: swatcher.c
src/backend/: backend.h  backend_fanotify.c  backend_fsevents.c  backend_inotify.c  backend_kqueue.c  backend_poll.c  backend_registry.c  backend_uring.c  backend_win32.c
src/core/: error.c  error.h  event.c  log.c  pattern.c  pattern.h  rescan.c  rescan.h  swatcher.c  target.c  vcs.c  vcs.h
src/internal/: alloc.c  alloc.h  internal.h  pool.c  pool.h  uring_syscall.h
src/platform/: platform.h  platform_posix.c  platform_windows.c
src/regex/: re.c  re.h
tests/: bench_poll.c  stress_inotify.c  stress_win32.c  test_allocator.c  test_backend_select.c  test_error.c  test_fsevents.c  test_inotify.c  test_kqueue.c  test_pattern.c  test_platform.c  test_poll.c  test_win32.c
